prevent editor pane from expanding the html on overflow y

--- a/frontend/src/components/Editor.module.scss
+++ b/frontend/src/components/Editor.module.scss
@@ -35,6 +35,7 @@ $vscode-background-color: #181818;
 
       .panesContainer {
         height: 100%;
+        min-height: 0;
         display: flex;
       }
     }
